--- a/spring-framework/pom.xml
+++ b/spring-framework/pom.xml
@@ -10,10 +10,10 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>com.spring</groupId>
-    <artifactId>spring</artifactId>
+    <artifactId>spring-framework</artifactId>
     <packaging>jar</packaging>
 
-    <name>spring</name>
+    <name>spring-framework</name>
     <!-- FIXME change it to the project's website -->
     <url>http://www.example.com</url>
     <dependencies>
