--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,9 @@
     <version>1.0-SNAPSHOT</version>
     <modules>
         <module>spring-framework</module>
+        <module>common</module>
     </modules>
-    <groupId>com.rain</groupId>
+    <groupId>com.rain.springboot</groupId>
     <artifactId>springboot</artifactId>
     <packaging>pom</packaging>
 
