--- a/spring-framework/pom.xml
+++ b/spring-framework/pom.xml
@@ -3,13 +3,13 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <groupId>com.rain</groupId>
+        <groupId>com.rain.springboot</groupId>
         <artifactId>springboot</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>com.spring</groupId>
+    <groupId>com.rain.springboot</groupId>
     <artifactId>spring-framework</artifactId>
     <packaging>jar</packaging>
 
